# project-atlas

./: .env  pyproject.toml  requirement.txt
docs/: README.md  git_workflow.txt
tests/: test_airbnb_server.py  test_travel_server.py
